tests/vertical-slice/reject/supervisor_init_arg_non_bitcopy_evasions.hew
// Reject fixture: supervised child init arg evasion shapes must fail closed.
//
// The init-closure restart model (v0.6) admits scalar BitCopy primitives
// and owned `string`/`bytes` (the thunk loads or deep-clones them per
// incarnation).  The following shapes are still walled because their
// clone-in-thunk codegen is not wired (or is structurally forbidden):
//   - Option<T> wrapping an owned type
//   - tuples containing owned types
//   - user records
//   - HashMap and HashSet collections

record Wrapper { inner: Vec<i64> }

actor MaybeGreeter {
    var name: Option<string>;
    init(name: Option<string>) {
        name = name;
    }
    receive fn greet() {}
}

actor PairHolder {
    var pair: (string, i64);
    init(pair: (string, i64)) {
        pair = pair;
    }
    receive fn noop() {}
}

actor WrapperHolder {
    var data: Wrapper;
    init(data: Wrapper) {
        data = data;
    }
    receive fn noop() {}
}

actor Index {
    var entries: HashMap<string, i64>;
    init(entries: HashMap<string, i64>) {
        entries = entries;
    }
    receive fn noop() {}
}

actor Seen {
    var ids: HashSet<i64>;
    init(ids: HashSet<i64>) {
        ids = ids;
    }
    receive fn noop() {}
}

supervisor App {
    strategy: one_for_one;
    intensity: 3 within 60s;

    child maybe: MaybeGreeter(name: Some("hello"));
    child pair: PairHolder(pair: ("hello", 1));
    child wrap: WrapperHolder(data: Wrapper { inner: [] });
    child index: Index(entries: HashMap::<string, i64>::new());
    child seen: Seen(ids: HashSet::<i64>::new());
}

fn main() -> i64 {
    spawn App;
    42
}
